test_data/end_to_end/err__use_wildcard_on_non_module/stderr.txt
error: expected module
  --> main.cz:7:5
7 | use S::*;
        ~

error: expected module
  --> main.cz:8:9
8 | use m1::S::*;
            ~

error: expected module
  --> main.cz:10:9
10 | use m1::S::*;
             ~

error: expected module
  --> main.cz:11:9
11 | use m1::S::{};
             ~

error: associated item `x` not found for type `S`
  --> main.cz:12:12
12 | use m1::S::x;
                ~

error: associated item `foo` not found for type `S`
  --> main.cz:13:14
13 | use m1::{S::{foo, bar::x, self}};
                  ~~~

error: associated item `bar` not found for type `S`
  --> main.cz:13:19
13 | use m1::{S::{foo, bar::x, self}};
                       ~~~

error: associated item `self` not found for type `S`
  --> main.cz:13:27
13 | use m1::{S::{foo, bar::x, self}};
                               ~~~~

error: associated item `foobar` not found for type `S`
  --> main.cz:14:13
14 | use m1::{S::foobar, self};
                 ~~~~~~

error: name `m1` is defined multiple times
  --> main.cz:14:21
14 | use m1::{S::foobar, self};
                         ~~~~

error: could not find `A` in current scope
  --> main.cz:17:5
17 |     A;
         ~

error: could not find `B` in current scope
  --> main.cz:18:5
18 |     B;
         ~

error: could not find `C` in current scope
  --> main.cz:19:5
19 |     C;
         ~
